# ChangeLog for dev-db/mysql
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.745 2015/07/30 20:40:19 grknight Exp $

  30 Jul 2015; Brian Evans <grknight@gentoo.org> mysql-5.6.26-r1.ebuild,
  mysql-5.6.26.ebuild:
  Use eclass variables to block the validate_password plugin wrt bug 556348

*mysql-5.6.26 (30 Jul 2015)
*mysql-5.6.26-r1 (30 Jul 2015)

  30 Jul 2015; Brian Evans <grknight@gentoo.org> +mysql-5.6.26-r1.ebuild,
  +mysql-5.6.26.ebuild:
  Version bump for 5.6 series

  29 Jul 2015; Brian Evans <grknight@gentoo.org> -mysql-5.5.43.ebuild:
  Drop vulernable 5.5. version wrt Bug 555478

*mysql-5.5.45 (29 Jul 2015)

  29 Jul 2015; Brian Evans <grknight@gentoo.org> +mysql-5.5.45.ebuild:
  Version bump for 5.5 series

*mysql-5.6.25-r1 (28 Jul 2015)

  28 Jul 2015; Brian Evans <grknight@gentoo.org> +mysql-5.6.25-r1.ebuild,
  metadata.xml:
  Revbumps for new mysql packaging splitting client and server

*mysql-5.6.25 (01 Jun 2015)

  01 Jun 2015; Brian Evans <grknight@gentoo.org> +mysql-5.6.25.ebuild:
  Version bump for 5.6.25

*mysql-5.5.44 (30 May 2015)

  30 May 2015; Brian Evans <grknight@gentoo.org> +mysql-5.5.44.ebuild:
  Version bump on 5.5 series.  Only kept for upgrades

  27 May 2015; Brian Evans <grknight@gentoo.org> -mysql-5.5.42.ebuild,
  -mysql-5.6.22.ebuild, -mysql-5.6.23.ebuild:
  Drop vulnerable versions for security bug 546722

  27 May 2015; Agostino Sarubbo <ago@gentoo.org> mysql-5.6.24.ebuild:
  Stable for arm, wrt bug #546722

  29 Apr 2015; Agostino Sarubbo <ago@gentoo.org> mysql-5.6.24.ebuild:
  Stable for ppc, wrt bug #546722

  28 Apr 2015; Agostino Sarubbo <ago@gentoo.org> mysql-5.6.24.ebuild:
  Stable for ia64, wrt bug #546722

  28 Apr 2015; Agostino Sarubbo <ago@gentoo.org> mysql-5.6.24.ebuild:
  Stable for alpha, wrt bug #546722

  25 Apr 2015; Mike Gilbert <floppym@gentoo.org> mysql-5.5.42.ebuild,
  mysql-5.5.43.ebuild: