@@ -19,26 +19,16 @@ EBUILD mysql-5.6.24.ebuild 5232 SHA256 8c083b843aaba3a314cf941c8528bbdb7e379959d
 EBUILD mysql-5.6.25-r1.ebuild 5663 SHA256 006374ff5c756a3463348492377312d4787144708380b3f392c93ece26a13d6b SHA512 8b38cf6d117a366b8042bc2055fd139ae0ffd3bae389b77b117f661b4be345fd4811571026d7b53739ffc6af2b38dac7742e8458ea6726f6a2e66b7f946d7d15 WHIRLPOOL 71b8eec1f54aa67852ed1f407139e40179c96884251ceaddb77861ec53ce14ff4df702429e804c88e850c4a57938d832ad1dadce91b234f5dad9a9c490c7edf1
 EBUILD mysql-5.6.25.ebuild 5245 SHA256 a3432045b80c8e5cfdc0a509a18f88c23c652a737f2491d0ba946290cf853c46 SHA512 481b5ccbfced31f711f529b8ccce4bdf28c113958ed31a13a9262b6bc3f170f7333bf647e0971eacc3e15c26c742d90a2b26928df4539468f8ed36dd6407818c WHIRLPOOL 216930d9d58d8a6dbedb295c5ba37922d3c4367d09789bea5960bb9c4bccceb3fccb45007a60ad1b0bbf23758633f55c87484179f809c7d8800ac5f015bca8d1
 EBUILD mysql-5.6.26-r1.ebuild 5844 SHA256 cf8bc0567da1e170374064a19389afb7aae4684de0f553415cba9883ac18b41d SHA512 324f79a6fafb0e8b8ebcc6d827bbacdabca04b1f9d817374abbb4afd950f27d9f0871bf08c6ca31d2f1c450354c23186c114f2b6b9044b1af208e86f6bf9a84d WHIRLPOOL 044ae56f8610c4fef27798b12c1c85af8d709fe94d5204b2531efc96ece6106fba40d767f01df3c9762126a2b41becc01580faff8f0cbad42c5b6ba6c52e7352
-EBUILD mysql-5.6.26.ebuild 5449 SHA256 ab36cfa04c3118ae9332597f2e5ce5fb7f3b5568b5fa1fae794b743d8c7bb6ce SHA512 781a0bb0abe1c62182cb3c31b1f1359eb376fe0331f30a675a785fea411bb2c802002ce7ee7d43b6063254c408f46b686824a950fbf30c18fb827f718fbc4623 WHIRLPOOL 2e74af258cea992e0afad216dcdd9356b6850032a28988227966ca0ca91d7fc938e02d1607f3d39927bf27b06ae6adc1f2fb5a24460cdbb27fe2f1d141133f52
-MISC ChangeLog 26927 SHA256 d086412dd20a87eddc972bbc9ef204261e461d3a128b373ecdf7146bea6e96bb SHA512 ef373f8cbb0f8acffb90399f49adedf5c79f9b111c8166cbc542a39c767ac68b2004fd192b7e76914b47562e8bf6af1313d8de18bc13b51f1602cf350b639ad4 WHIRLPOOL 31c645aee392405405f89b08359fbab875f7d1e23c6e276637cb7025b0f8209ba32d60398e2cb652a5717947d818d74fed132a3ad84a0e85d7e8cd6b85be4468
+EBUILD mysql-5.6.26.ebuild 5447 SHA256 52844946223f6afc4a15b6f4d347cc70f3f644bae94699ed6ca59047b576e6f3 SHA512 905f0f38b41c2ce7c0d222710372fb8576f04aa62028b39dbf2ed1f8708842b089b87a5dc5a54a3a94e176548ec8d9b12a8850dcdc92ace6024e4261731a590d WHIRLPOOL 894e67928997bf6007135975d65d13440e085820c416f5620aa7be44dfe11e20aa0ddbd65aa23850bfb3c33f68024e7d623a4c8299477f04a1e59a68dc1d6628
+MISC ChangeLog 27029 SHA256 5f13aeb3318b7787ddd76e994d1c027b6acaecb2218606142b27c3ad1b5bd356 SHA512 0c7a4edbd57fdf649a15567dd446eef515af82eb5c1ab2fa168c27496ee88381248428fb250624c3d493f3b0687f57dcb6f9d10862eb02c44456305dc3e1cff9 WHIRLPOOL c727953eb4288f291e5323cd04eeb78fb8436bde976586acb97d45d20567dcb13e91b208ca0b9ef3508faeb126c005f4e68840e974869861d617963924bbb4ae
 MISC ChangeLog-2010 108404 SHA256 93dda53b8871d9040e6aebb59f095a8debd5c0a9437e78e5e949989e209ba5cd SHA512 5f54b7c2e25d27680a9313da2450851118e34a57202d9f36f59da52834ca3b587701d93868d71bf684ddc253d49f87837c8d7e2d442f2955dfde8a701150fbe5 WHIRLPOOL 55f758942e3012aa0ae7d529c2f8b6e0d8f4d7cbde09039f16cd05f0a58fc4e3e09ccd50e366effdcaab4641300eb0f494ddbe3a35a645ced8a9d747d80e9821
 MISC metadata.xml 1411 SHA256 0edc5387d481074924e19441c4a0dffe9308a616f557b7d9f4b9ae71eebf5961 SHA512 5efefdcca328de80c991910046e42174f79ab6038601e75691100267f6d442fc3262be56b3f80d14e9de2fbba8c3c73b39b474671c99e520392f9f7fda3cbedb WHIRLPOOL 7a9aeaf8f04ec7332a7632e1b68eec478e3e81f427e18e98a8b3ec1be6dc00ce37902a33a578bec332cca422c856c61b91063d03f2f1d0b110b142f2cacf7631
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVuox9XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2NkMyRTQ0RUQ5MEUzMjc1OEU3RDU1QzBE
-MUY3ODFFRkY5RjRBM0I2AAoJENH3ge/59KO2qkQQALWQBD9VRLcC/MzTExJPPjLd
-DfY5lv2vonaygx8Cx/rt3O+xxTWXQ0Oj4UKAndNml8XeIz2E5sFhtlkKFtjZ0p+M
-oKAkpZEDmKAx2HB2LowiP1TbJuxjybLQ7ruLBCih6AsSCYcDgWXP3GdBFhBQ2wEz
-m7QCRCeFmWgP33jhGMSC5gOq1AU/hdpGLfDDJR8Z+mnmQUa8nkFUneT+eyGJS0f0
-l9L3wznAUaPo+ZRZKgJVWMwCGkhBi3ymRuccztItOOlyQdQadadvr6i1u2Fvtkoa
-rUXSSGn49kD7NycpFKm5ys7bWfb2ds2fG1MZD4RGDDMyNp/nDulmXMtY6vS/lrY+
-RnTDVyW2oECH8TZrMGeB+dTOx2Z+9vSE4rq2SnuK+uCTBAthEsLqZ4QDeZoI9wbH
-wqNKC8T8VcqReRdjpdguDRQLHEwe2rC2X7yKAtIWfG41i5cxzLrlezc+dtP/2MVQ
-2x4GFIg5ZJus7pxWuFwzPgD2KUg2NuV+EcFwQHIg/ywCjpLloiOAwE/P2rQ+F2xO
-c1G20iPOLHPtaJCxiYmicfvhEOs200MrYlKn+XFHVMz3RK4c1mo8OWvgJQ1QM6zp
-FQzEhyMPjp5nBlWfujJOOY6Uc4m5bVsj4NvlypxfO9dCGGAQgfmjw9yOovIuVTaw
-CBzeGhsJXLf4y0r41jw9
-=4F55
+iJwEAQEIAAYFAlW/zYMACgkQG9wOWsQutdYE7QQAjAlclau9uoU1MochPhqmCM91
+TIlU9mUz0w5jb8qamDUcN0AK9SQbt6EQV6HZVMBSRUU/zpVIbSwxtWETniq/aTQM
+iCG6Z1byPgxgfqwJ6FyO/mldFtgn6b4aeEg049NxTfUcJ9JE1DpgaR8gc5drJRan
+Mogtp+phFfkGtj+5+q8=
+=3gFK
 -----END PGP SIGNATURE-----
