@@ -5,26 +5,14 @@ AUX zim-0.60-remove-ubuntu-theme.patch 669 SHA256 dde1ba982a802bc124d82af92c5475
 AUX zim-0.62-desktop.patch 385 SHA256 2752a817ee5777477d7ec486b3fbf9e7e3dd7e20eb2325490ed2a560533a5fef SHA512 c9cef0db8defd99d02a08dd46176721851f90e1f161f8f0c3f61788f3050d2f92280be70c3567fa60550c97f966f697a6d5943aaa758b4dc9e16500471be5cc7 WHIRLPOOL 8aab934fc97959153ca7b584019f392f337b5f71c172f685ad42cc39bc446b448cdec8d5b9864cc73bdcdabfe7a85e0bd2b263246e82c3ac02bfe214a059ab56
 DIST zim-0.61.tar.gz 1733251 SHA256 5843a9b2fb41f153b7b628732ac157889709b9937b4921c05099af81dceccc4a SHA512 381f1d740bedaecf52c4b7178e7ac17aac98971cc5292476396a28b965b93195a2e07e55f7872048b3577123cd6afb44c2a0e2dee220b02a84fed2a13fb67f61 WHIRLPOOL d0f9d8ce65e8970226f8878cc4e89d228c76e06f9772692d7bc3653b4fc85b4b9ed22d2b0aa91aa724384062a4b1b93859594089c9b1799c2eded313cea7deba
 DIST zim-0.62.tar.gz 1772246 SHA256 19d62aebd2c1a92d84d80720c6c1dcdb779c39a2120468fed01b7f252511bdc2 SHA512 53dc97052ee8ec57a61adf9d540f7721ee7e8d8d2500fc4d6ca7bc1b82dc07c5596b8b900c312d155bb1c06e7fbf661e667e0da391ac8f1e326caa2942f7cb1f WHIRLPOOL f1b44e27b49577868f5374b196fe5d59fd111664568141af1aa809fdcf916f830e385320f87c075242ad0ec7fa3db4d6d87fcbe7b70c850c1f1b3725abc66978
-EBUILD zim-0.61.ebuild 1649 SHA256 477fd34e5b92f75050dd958c0e4dc9d016647e1cfbc0576b5f7b8132f9f2056c SHA512 ccf49147fc644a61ab38c5a84c73b0625ff91f6ddff4dc5bd061c97fc0b5249333948c54bd680c656355fa2b95b2c5e5d0ceedd2868faa5f9687469705973048 WHIRLPOOL 9d4f2496c5a5ea5363998cce486f1e6c4db696b7b09383c4a131fbfb03172d737818f5df7fad04a87074848d80d51936d0d3e6b091850c5214482f332744bbe5
-EBUILD zim-0.62.ebuild 1911 SHA256 7359d88a39b441567d6dff84162cf5dfcc27c6a42e873d205632b8e5d4f383df SHA512 13eab4369c96a41496e674cf5ac08a0fe9885a153886c7830a89b5c12f5adf7a978f8c927411009e159416c4b32ef437be4b6ad54da2f183b7dd699222e713f0 WHIRLPOOL dfcfe47dc2f81885d9f91f7ff57602a111a67a05ce4bcd7e2deda16ac96bea601d004a5ce160584edc7f91bab470ab6dbe6c7b12f9dece90f92b67b1d2a6305f
-MISC ChangeLog 4918 SHA256 0ba350ea4fb2fceea60be4389c868725180e01aca8747ed3153902612165c62e SHA512 db395b81896258eeaedf9929cc9c4c524b1b1535e164861d5a9a80f983b04f2df5f5d7c3f9e8cc13dafe85c4487b8ef1438afaec4642f32ccaae02bdaf616a52 WHIRLPOOL eb6abee7825aa92d0ad905f099809cd2ebce482198dde41397292df41322dac2e1f032c73477d9062a1dd39a9c7d37cb5ac2c6f76f0288bdac566193059d447e
+EBUILD zim-0.61.ebuild 1653 SHA256 3aeb58ec0eedfe17f846701a3954240f3ca248d957aea3dafcce8b24f2a84adc SHA512 960b43233419b40b7d4651e4cb1295dd48882d13f3d2d6c34e41ae291895ea711b8f1ae4d5244771b9f7e3493bd3cff51b5b62d0a12f6e1e1be36ce5d1d84ac2 WHIRLPOOL ec345eb31a775492febb6dc53e0643dea4051229f66a8b1d9f7f4288b1a762f2d2d462de17b568f8d2274e8e41a68bf2e071c01b3e4288f9bac9fb7592d3e5b6
+EBUILD zim-0.62.ebuild 1918 SHA256 d8aee593055e2014d89f3e5d1c529b3ef41aa1700eeebd54967bb877dd03b91a SHA512 92cd545d5278c4f4b5dffd0d4c4460f0d589fe1441873c31f1e96b15c3c77aa1bd57a3a6d20db48de98f0999e950808878b269ccf44ea238a026286d4e628757 WHIRLPOOL 86252f2f5474c4b13583a2e4d9e7e6d88a6fc3a3cc3baf21e0b8388ad729edf90963789c6f1c37a5ed4f3f1ae12acb64176ba920d7984bdf9173432528e35788
+MISC ChangeLog 5058 SHA256 3c59d9f45cf76eeeec35363936d0d556900f36c2a1dc0c609f44c0fe10a96039 SHA512 bc09b6c804146c5e0e344cfa6ced892f4141acd4f3d002d7943749daa4d044857a70c78926e600ecbc1e5df4b832a073afa7e04bb444528aaa8b8ae59d1b2017 WHIRLPOOL 49a8f0bde2a58a91e0437b829da9f18d376a7e2741051a213a2cabc6c9f8a6b8fff133a4b36cb58e910413ea500e840fa07ce74d12e2d1e27ef981d61055f73c
 MISC metadata.xml 717 SHA256 2675d5e6d78840b22e6e15457544ee0858433257c24ec45b53a28f7732ca91a7 SHA512 d02d3013131b1a92be05497405a9e0ab1609671ca7427c883a90c0fd84d47c4f6dd1ed11443531164da133dc21b58ef82fafa1387e7240be2745cfd40bb21525 WHIRLPOOL 7b4c79146e2895957a699381f8b5cb8e2db67af6be634b482f50ddb3f9e15b6ee374aabe2fa24081282c862e7ebd730415e43b8613c0644ec6fb0d7a9584a248
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVJWUEXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOR9QQALm08VKmxeH+rjZW4WO5rW60
-aa5yqe/pRFMO/svsUgpthLQDN9c1jfrMqaQw9EEVzQ7jphlYKPdFA6Xc1G32l2qB
-cRDu3AqUVKZ9Z8OhvrH0F7PKUy8w24DRl+ivK9b3sF9j5D4mB7LI0pPH5/XWuq+X
-DO50Rn5txthvPF7mOZMVuurlNMrjOx2L7XopX9wnDI6RrEbG2fnpfxjOMN8hwVHY
-V5MvQpUoBmHyeakfHdGrIbK6bx6cNL6EgG7mtX7eeMlPMfqOgNHGK2V2d8ANKJHv
-4qJoIhLJFPDgDxE2lKCr4URB3a1qYExtCFJIPfGnrcfYUPWnZzRyY9HV2pGhLsCm
-XfJ0afl6O7UkJNiFrd4flSGUcbcF80E3VGuFdRJCWROtCPsvFpvYnUEwbqHzlRzV
-XZCmd5EvRrQ9vjl6os5EHwOWuWUUKQYNSpJbnaUgES8bv5kDyfZTuVRv9AAKUEJx
-M1UTh3+SCCGrdpHWTSYh71vEdYYRdg/GxnEm+bh8mCVm2rtU0wObY1H3FyOpGXVQ
-E4E+oMWlCjGfJNNIEwscW0/YwHxIRYlzf/YjNf4qzAOGi1b+gjVmJXeZvEBLUsWm
-FJdS/dMt5Fq1Rg6j2vV9s91zCTnwZFBtCRWbCWJ2z/UTnmQkBEO450aghVCvwGpq
-LGxfxwwImq3PS8LwQFWJ
-=jE+0
+iEYEAREIAAYFAlW/zJ8ACgkQsAvGakAaFgCAfgCgt4ybiMRCuIbzMKaWW1SZ0pgc
+stsAoLxjAAYaBMti2EhRfAW9jOh2E/rQ
+=3e1y
 -----END PGP SIGNATURE-----
